VPC with a NAT Gateway and public and private subnets.yml
---
Description: 'ArcGIS CloudFormation Template: Creates VPC and other networking AWS
  resources. **WARNING** You will be billed by AWS for the AWS resources if you create
  a stack from this template.'
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
    - Label:
        default: VPC Configuration
      Parameters:
      - AZs
      - VPCCIDR
    - Label:
        default: Public Subnet Configuration
      Parameters:
      - PublicSubnet1CIDR
      - PublicSubnet2CIDR
    - Label:
        default: Private Subnet Configuration
      Parameters:
      - PrivateSubnet1CIDR
      - PrivateSubnet2CIDR
    - Label:
        default: NAT Configuration
      Parameters:
      - NATEIPAllocationID
    ParameterLabels:
      AZs:
        default: Availability Zones (Required)
      VPCCIDR:
        default: VPC CIDR (Optional)
      PublicSubnet1CIDR:
        default: Public Sunbet 1 CIDR (Optional)
      PublicSubnet2CIDR:
        default: Public Sunbet 2 CIDR (Optional)
      PrivateSubnet1CIDR:
        default: Private Sunbet 1 CIDR (Optional)
      PrivateSubnet2CIDR:
        default: Private Sunbet 2 CIDR (Optional)
      NATEIPAllocationID:
        default: Elastic IP Address Allocation ID (Required)
Parameters:
  AZs:
    Type: List<AWS::EC2::AvailabilityZone::Name>
    Description: Choose any two availability zones for your VPC and subnets.
  VPCCIDR:
    Type: String
    Default: 10.0.0.0/16
    AllowedPattern: "^([0-9]{1,3}\\.){3}[0-9]{1,3}(\\/([0-9]|[1-2][0-9]|3[0-2]))?$"
    ConstraintDescription: Invalid VPC CIDR.
    Description: Provide VPC CIDR range. Default is '10.0.0.0/16'
  PublicSubnet1CIDR:
    Type: String
    Default: 10.0.0.0/24
    AllowedPattern: "^([0-9]{1,3}\\.){3}[0-9]{1,3}(\\/([0-9]|[1-2][0-9]|3[0-2]))?$"
    ConstraintDescription: Invalid public subnet 1 CIDR.
    Description: Provide first public subnet CIDR range. Default is '10.0.0.0/24'
  PublicSubnet2CIDR:
    Type: String
    Default: 10.0.1.0/24
    AllowedPattern: "^([0-9]{1,3}\\.){3}[0-9]{1,3}(\\/([0-9]|[1-2][0-9]|3[0-2]))?$"
    ConstraintDescription: Invalid public subnet 2 CIDR.
    Description: Provide second public subnet CIDR range. Default is '10.0.1.0/24'
  PrivateSubnet1CIDR:
    Type: String
    Default: 10.0.2.0/24
    AllowedPattern: "^([0-9]{1,3}\\.){3}[0-9]{1,3}(\\/([0-9]|[1-2][0-9]|3[0-2]))?$"
    ConstraintDescription: Invalid private subnet 1 CIDR.
    Description: Provide first private subnet CIDR range. Default is '10.0.2.0/24'
  PrivateSubnet2CIDR:
    Type: String
    Default: 10.0.3.0/24
    AllowedPattern: "^([0-9]{1,3}\\.){3}[0-9]{1,3}(\\/([0-9]|[1-2][0-9]|3[0-2]))?$"
    ConstraintDescription: Invalid private subnet 2 CIDR.
    Description: Provide second private subnet CIDR range. Default is '10.0.3.0/24'
  NATEIPAllocationID:
    Type: String
    AllowedPattern: "^eipalloc-[a-z0-9]*$"
    ConstraintDescription: Invalid Elastic IP Address. The Elastic IP address value
      can be empty or must be in the format 'eipalloc-XXXXXXXX'.
    Description: Provide the Allocation ID of an Elastic IP address (eipalloc-XXXXXXXX)
      for NAT Gateway.
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock:
        Ref: VPCCIDR
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
      - Key: arcgisenterprise:cloudformation:logical-id
        Value: VPC
      - Key: arcgisenterprise:cloudformation:stack-id
        Value:
          Ref: AWS::StackId
      - Key: arcgisenterprise:cloudformation:stack-name
        Value:
          Ref: AWS::StackName
      - Key: arcgisenterprise:cloudformation:template-name
        Value: arcgis-vpc-dmz.template.json
      - Key: arcgisenterprise:cloudformation:template-provider
        Value: Esri
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: AWS::StackName
            - "-vpc"
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: arcgisenterprise:cloudformation:logical-id
        Value: InternetGateway
      - Key: arcgisenterprise:cloudformation:stack-id
        Value:
          Ref: AWS::StackId
      - Key: arcgisenterprise:cloudformation:stack-name
        Value:
          Ref: AWS::StackName
      - Key: arcgisenterprise:cloudformation:template-name
        Value: arcgis-vpc-dmz.template.json
      - Key: arcgisenterprise:cloudformation:template-provider
        Value: Esri
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: VPC
      InternetGatewayId:
        Ref: InternetGateway
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      AvailabilityZone:
        Fn::Select:
        - 0
        - Ref: AZs
      CidrBlock:
        Ref: PublicSubnet1CIDR
      MapPublicIpOnLaunch: true
      Tags:
      - Key: arcgisenterprise:cloudformation:logical-id
        Value: PublicSubnet1
      - Key: arcgisenterprise:cloudformation:stack-id
        Value:
          Ref: AWS::StackId
      - Key: arcgisenterprise:cloudformation:stack-name
        Value:
          Ref: AWS::StackName
      - Key: arcgisenterprise:cloudformation:template-name
        Value: arcgis-vpc-dmz.template.json
      - Key: arcgisenterprise:cloudformation:template-provider
        Value: Esri
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: AWS::StackName
            - "-PublicSubnet1"
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      AvailabilityZone:
        Fn::Select:
        - 1
        - Ref: AZs
      CidrBlock:
        Ref: PublicSubnet2CIDR
      MapPublicIpOnLaunch: true
      Tags:
      - Key: arcgisenterprise:cloudformation:logical-id
        Value: PublicSubnet2
      - Key: arcgisenterprise:cloudformation:stack-id
        Value:
          Ref: AWS::StackId
      - Key: arcgisenterprise:cloudformation:stack-name
        Value:
          Ref: AWS::StackName
      - Key: arcgisenterprise:cloudformation:template-name
        Value: arcgis-vpc-dmz.template.json
      - Key: arcgisenterprise:cloudformation:template-provider
        Value: Esri
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: AWS::StackName
            - "-PublicSubnet2"
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      AvailabilityZone:
        Fn::Select:
        - 0
        - Ref: AZs
      CidrBlock:
        Ref: PrivateSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags:
      - Key: arcgisenterprise:cloudformation:logical-id
        Value: PrivateSubnet1
      - Key: arcgisenterprise:cloudformation:stack-id
        Value:
          Ref: AWS::StackId
      - Key: arcgisenterprise:cloudformation:stack-name
        Value:
          Ref: AWS::StackName
      - Key: arcgisenterprise:cloudformation:template-name
        Value: arcgis-vpc-dmz.template.json
      - Key: arcgisenterprise:cloudformation:template-provider
        Value: Esri
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: AWS::StackName
            - "-PrivateSubnet1"
  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      AvailabilityZone:
        Fn::Select:
        - 1
        - Ref: AZs
      CidrBlock:
        Ref: PrivateSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags:
      - Key: arcgisenterprise:cloudformation:logical-id
        Value: PrivateSubnet2
      - Key: arcgisenterprise:cloudformation:stack-id
        Value:
          Ref: AWS::StackId
      - Key: arcgisenterprise:cloudformation:stack-name
        Value:
          Ref: AWS::StackName
      - Key: arcgisenterprise:cloudformation:template-name
        Value: arcgis-vpc-dmz.template.json
      - Key: arcgisenterprise:cloudformation:template-provider
        Value: Esri
      - Key: Name
        Value:
          Fn::Join:
          - ''
          - - Ref: AWS::StackName
            - "-PrivateSubnet2"
  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      SubnetId:
        Ref: PublicSubnet2
      AllocationId:
        Ref: NATEIPAllocationID
      Tags:
      - Key: arcgisenterprise:cloudformation:logical-id
        Value: NatGateway
      - Key: arcgisenterprise:cloudformation:stack-id
        Value:
          Ref: AWS::StackId
      - Key: arcgisenterprise:cloudformation:stack-name
        Value:
          Ref: AWS::StackName
      - Key: arcgisenterprise:cloudformation:template-name
        Value: arcgis-vpc-dmz.template.json
      - Key: arcgisenterprise:cloudformation:template-provider
        Value: Esri
  PublicSubnetsRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: arcgisenterprise:cloudformation:logical-id
        Value: PublicSubnetsRouteTable
      - Key: arcgisenterprise:cloudformation:stack-id
        Value:
          Ref: AWS::StackId
      - Key: arcgisenterprise:cloudformation:stack-name
        Value:
          Ref: AWS::StackName
      - Key: arcgisenterprise:cloudformation:template-name
        Value: arcgis-vpc-dmz.template.json
      - Key: arcgisenterprise:cloudformation:template-provider
        Value: Esri
  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PublicSubnetsRouteTable
      SubnetId:
        Ref: PublicSubnet1
  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PublicSubnetsRouteTable
      SubnetId:
        Ref: PublicSubnet2
  InternetGatewayRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: PublicSubnetsRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: InternetGateway
    DependsOn:
    - AttachGateway
  PrivateSubnetsRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: arcgisenterprise:cloudformation:logical-id
        Value: PrivateSubnetsRouteTable
      - Key: arcgisenterprise:cloudformation:stack-id
        Value:
          Ref: AWS::StackId
      - Key: arcgisenterprise:cloudformation:stack-name
        Value:
          Ref: AWS::StackName
      - Key: arcgisenterprise:cloudformation:template-name
        Value: arcgis-vpc-dmz.template.json
      - Key: arcgisenterprise:cloudformation:template-provider
        Value: Esri
  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PrivateSubnetsRouteTable
      SubnetId:
        Ref: PrivateSubnet1
  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PrivateSubnetsRouteTable
      SubnetId:
        Ref: PrivateSubnet2
  NatGatewayRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: PrivateSubnetsRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: NatGateway
Outputs:
  VPCId:
    Description: VPC ID
    Value:
      Ref: VPC
  PublicSubnet1Id:
    Description: Public Subnet 1 id
    Value:
      Ref: PublicSubnet1
  PublicSubnet2Id:
    Description: Public Subnet 2 id
    Value:
      Ref: PublicSubnet2
  PrivateSubnet1Id:
    Description: Private Subnet 1 id
    Value:
      Ref: PrivateSubnet1
  PrivateSubnet2Id:
    Description: Private Subnet 2 id
    Value:
      Ref: PrivateSubnet2
